--- a/app/index.html
+++ b/app/index.html
@@ -27,7 +27,7 @@
                           fill="white"/>
                     <circle opacity="0.5" cx="21" cy="21" r="20.5" stroke="white"/>
                 </svg>
-                <a class="header__email" href="emailto:tecniwell@mail.com">tecniwell@mail.com</a>
+                <a class="header__email" href="emailto:Drilltechllc@mail.ru">Drilltechllc@mail.ru</a>
             </div>
             <div class="header__menu-phone">
                 <svg width="42" height="42" viewBox="0 0 42 42" fill="none" xmlns="http://www.w3.org/2000/svg">
@@ -35,7 +35,7 @@
                     <path d="M27.9996 25.7576V27.8978C28.0004 28.0965 27.9602 28.2931 27.8817 28.4752C27.8031 28.6572 27.6879 28.8206 27.5435 28.9549C27.399 29.0892 27.2285 29.1915 27.0428 29.2551C26.8571 29.3188 26.6603 29.3424 26.465 29.3245C24.299 29.086 22.2183 28.3359 20.3902 27.1344C18.6895 26.0392 17.2475 24.5778 16.1667 22.8541C14.9771 20.993 14.2368 18.8741 14.0057 16.669C13.9881 16.4718 14.0113 16.2729 14.0736 16.0852C14.136 15.8975 14.2363 15.725 14.3681 15.5787C14.4998 15.4324 14.6602 15.3155 14.839 15.2355C15.0178 15.1555 15.2111 15.114 15.4065 15.1138H17.5183C17.8599 15.1104 18.1911 15.233 18.4501 15.4588C18.7091 15.6845 18.8783 15.998 18.9261 16.3409C19.0152 17.0258 19.1805 17.6983 19.4188 18.3455C19.5135 18.6008 19.534 18.8783 19.4779 19.1451C19.4218 19.4119 19.2913 19.6568 19.1021 19.8507L18.2081 20.7567C19.2102 22.5427 20.6693 24.0215 22.4316 25.0371L23.3256 24.1311C23.5169 23.9393 23.7586 23.8071 24.0218 23.7502C24.2851 23.6933 24.5589 23.7141 24.8108 23.8101C25.4495 24.0516 26.113 24.2191 26.7888 24.3094C27.1308 24.3583 27.4431 24.5329 27.6663 24.7999C27.8895 25.0669 28.0081 25.4077 27.9996 25.7576Z"
                           fill="white"/>
                 </svg>
-                <a href="tel:(+39) 0523 524086">(+39) 0523 524086</a>
+                <a href="tel:+7 985 774 0726">+7 985 774 0726</a>
             </div>
         </div>
         <nav class="header__sub-menu">
@@ -70,7 +70,7 @@
                           fill="white"/>
                     <circle opacity="0.5" cx="21" cy="21" r="20.5" stroke="white"/>
                 </svg>
-                <a class="header__email" href="emailto:tecniwell@mail.com">tecniwell@mail.com</a>
+                <a class="header__email" href="Drilltechllc@mail.ru">Drilltechllc@mail.ru</a>
             </div>
             <div class="header__menu-phone">
                 <svg width="42" height="42" viewBox="0 0 42 42" fill="none" xmlns="http://www.w3.org/2000/svg">
@@ -78,7 +78,7 @@
                     <path d="M27.9996 25.7576V27.8978C28.0004 28.0965 27.9602 28.2931 27.8817 28.4752C27.8031 28.6572 27.6879 28.8206 27.5435 28.9549C27.399 29.0892 27.2285 29.1915 27.0428 29.2551C26.8571 29.3188 26.6603 29.3424 26.465 29.3245C24.299 29.086 22.2183 28.3359 20.3902 27.1344C18.6895 26.0392 17.2475 24.5778 16.1667 22.8541C14.9771 20.993 14.2368 18.8741 14.0057 16.669C13.9881 16.4718 14.0113 16.2729 14.0736 16.0852C14.136 15.8975 14.2363 15.725 14.3681 15.5787C14.4998 15.4324 14.6602 15.3155 14.839 15.2355C15.0178 15.1555 15.2111 15.114 15.4065 15.1138H17.5183C17.8599 15.1104 18.1911 15.233 18.4501 15.4588C18.7091 15.6845 18.8783 15.998 18.9261 16.3409C19.0152 17.0258 19.1805 17.6983 19.4188 18.3455C19.5135 18.6008 19.534 18.8783 19.4779 19.1451C19.4218 19.4119 19.2913 19.6568 19.1021 19.8507L18.2081 20.7567C19.2102 22.5427 20.6693 24.0215 22.4316 25.0371L23.3256 24.1311C23.5169 23.9393 23.7586 23.8071 24.0218 23.7502C24.2851 23.6933 24.5589 23.7141 24.8108 23.8101C25.4495 24.0516 26.113 24.2191 26.7888 24.3094C27.1308 24.3583 27.4431 24.5329 27.6663 24.7999C27.8895 25.0669 28.0081 25.4077 27.9996 25.7576Z"
                           fill="white"/>
                 </svg>
-                <a href="tel:(+39) 0523 524086">(+39) 0523 524086</a>
+                <a href="tel:+7 985 774 0726">+7 985 774 0726</a>
             </div>
         </div>
         <div class="header__right">
@@ -194,7 +194,7 @@
             НА ТЕРРИТОРИИ
             РОССИИ И СТРАН СНГ
         </div>
-        <div class="main-application__text">Мировой лидер в разработке и производстве оборудования для
+        <div class="main-application__text">Tecniwell - мировой лидер в разработке и производстве оборудования для
             струйной цементации, цементации и смесительных установок
         </div>
         <a class="main-application__button popup__button">Оставить заявку</a>
@@ -202,22 +202,20 @@
     <section class="main-experience">
         <div class="main-experience__inner page-padding">
             <div class="main-experience__left">
-                <div class="main-experience__title">
-                    <div class="main-experience__numbers">20 лет</div>
-                    <div class="main-experience__plus">
-                        +
-                    </div>
-                </div>
-                <div class="main-experience__sub-title">
-                    Компания на рынке
-                </div>
+                <!--                <div class="main-experience__title">-->
+                <!--                    <div class="main-experience__numbers">20 лет</div>-->
+                <!--                    <div class="main-experience__plus">-->
+                <!--                        +-->
+                <!--                    </div>-->
+                <!--                </div>-->
+                <!--                <div class="main-experience__sub-title">-->
+                <!--                    Компания на рынке-->
+                <!--                </div>-->
             </div>
             <div class="main-experience__right">
-                <div class="main-experience__text">Наша компания находится на рынке более 20 лет. Мы
-                    единственный
-                    официальный дилер в РФ и СНГ. Наша компания качественно
-                    выполняет любые поставленные задачи и предоставляет гибкие
-                    условия для постоянных клиентов.
+                <div class="main-experience__text">Более 20 лет наша компания - единственный
+                    официальный дилер Tecniwell - представляет итальянского производителя оборудования на рынках России
+                    и стран СНГ.
                 </div>
             </div>
         </div>
@@ -351,39 +349,39 @@
             <div class="main-category__card-opacity"></div>
             <div class="main-category__card-list">
                 <a href="" class="main-category__card">
-                    <img src="img/card/0.png" alt="">
+                    <img src="../../img/card/2.png" alt="">
                     <p class="">Триплексные насосы</p>
                 </a>
                 <a href="" class="main-category__card">
-                    <img src="img/card/0.png" alt="">
+                    <img src="../../img/card/3.png" alt="">
                     <p class="">Триплексные насосы</p>
                 </a>
                 <a href="" class="main-category__card">
-                    <img src="img/card/0.png" alt="">
+                    <img src="../../img/card/1.png" alt="">
                     <p class="">Триплексные насосы</p>
                 </a>
                 <a href="" class="main-category__card">
-                    <img src="img/card/0.png" alt="">
+                    <img src="../../img/card/4.png" alt="">
                     <p class="">Триплексные насосы</p>
                 </a>
                 <a href="" class="main-category__card">
-                    <img src="img/card/0.png" alt="">
+                    <img src="../../img/card/1.png" alt="">
                     <p class="">Триплексные насосы</p>
                 </a>
                 <a href="" class="main-category__card">
-                    <img src="img/card/0.png" alt="">
+                    <img src="../../img/card/5.png" alt="">
                     <p class="">Триплексные насосы</p>
                 </a>
                 <a href="" class="main-category__card">
-                    <img src="img/card/0.png" alt="">
+                    <img src="../../img/card/1.png" alt="">
                     <p class="">Триплексные насосы</p>
                 </a>
                 <a href="" class="main-category__card">
-                    <img src="img/card/0.png" alt="">
+                    <img src="../../img/card/1.png" alt="">
                     <p class="">Триплексные насосы</p>
                 </a>
                 <a href="" class="main-category__card">
-                    <img src="img/card/0.png" alt="">
+                    <img src="../../img/card/1.png" alt="">
                     <p class="">Триплексные насосы</p>
                 </a>
 
