--- a/app/index.html
+++ b/app/index.html
@@ -13,6 +13,10 @@
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@400;500;600;700&display=swap" rel="stylesheet">
 
+    <link rel="stylesheet" href="/path/to/style/jquery.jscrollpane.css" />
+    <script src="/path/to/cdn/jquery.min.js"></script>
+    <script src="/path/to/script/jquery.jscrollpane.js"></script>
+
 </head>
 <body>
 <div class="wrapper">
