--- a/app/index.html
+++ b/app/index.html
@@ -13,10 +13,12 @@
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@400;500;600;700&display=swap" rel="stylesheet">
 
-    <link rel="stylesheet" href="/path/to/style/jquery.jscrollpane.css" />
-    <script src="/path/to/cdn/jquery.min.js"></script>
-    <script src="/path/to/script/jquery.jscrollpane.js"></script>
+    <link
+            rel="stylesheet"
+            href="https://cdn.jsdelivr.net/npm/swiper@9/swiper-bundle.min.css"
+    />
 
+    <script src="https://cdn.jsdelivr.net/npm/swiper@9/swiper-bundle.min.js"></script>
 </head>
 <body>
 <div class="wrapper">
@@ -351,52 +353,148 @@
         <h3>Категории товаров</h3>
         <a>Перейти в каталог техники</a>
     </div>
-    <div class="main-category__card-helper__wrapper">
-        <div class="main-category__card-helper">
-            <div class="main-category__card-opacity"></div>
-            <div class="main-category__card-list">
-                <a href="" class="main-category__card">
-                    <img src="../../img/card/2.png" alt="">
-                    <p class="">Триплексные насосы</p>
-                </a>
-                <a href="" class="main-category__card">
-                    <img src="../../img/card/3.png" alt="">
-                    <p class="">Триплексные насосы</p>
-                </a>
-                <a href="" class="main-category__card">
-                    <img src="../../img/card/1.png" alt="">
-                    <p class="">Триплексные насосы</p>
-                </a>
-                <a href="" class="main-category__card">
-                    <img src="../../img/card/4.png" alt="">
-                    <p class="">Триплексные насосы</p>
-                </a>
-                <a href="" class="main-category__card">
-                    <img src="../../img/card/1.png" alt="">
-                    <p class="">Триплексные насосы</p>
-                </a>
-                <a href="" class="main-category__card">
-                    <img src="../../img/card/5.png" alt="">
-                    <p class="">Триплексные насосы</p>
-                </a>
-                <a href="" class="main-category__card">
-                    <img src="../../img/card/1.png" alt="">
-                    <p class="">Триплексные насосы</p>
-                </a>
-                <a href="" class="main-category__card">
-                    <img src="../../img/card/1.png" alt="">
-                    <p class="">Триплексные насосы</p>
-                </a>
-                <a href="" class="main-category__card">
-                    <img src="../../img/card/1.png" alt="">
-                    <p class="">Триплексные насосы</p>
-                </a>
+    <div class="swiper">
+        <!-- Additional required wrapper -->
+        <div class="swiper-wrapper">
+            <!-- Slides -->
+            <a href="" class="swiper-slide main-category__card">
+                <img src="../../img/card/2.png" alt="">
+                <p class="">Триплексные насосы</p>
+            </a>
+            <a href="" class="swiper-slide main-category__card">
+                <img src="../../img/card/3.png" alt="">
+                <p class="">Триплексные насосы</p>
+            </a>
+            <a href="" class="swiper-slide main-category__card">
+                <img src="../../img/card/1.png" alt="">
+                <p class="">Триплексные насосы</p>
+            </a>
+            <a href="" class="swiper-slide main-category__card">
+                <img src="../../img/card/2.png" alt="">
+                <p class="">Триплексные насосы</p>
+            </a>
+            <a href="" class="swiper-slide main-category__card">
+                <img src="../../img/card/3.png" alt="">
+                <p class="">Триплексные насосы</p>
+            </a>
+            <a href="" class="swiper-slide main-category__card">
+                <img src="../../img/card/1.png" alt="">
+                <p class="">Триплексные насосы</p>
+            </a>
+            <a href="" class="swiper-slide main-category__card">
+                <img src="../../img/card/2.png" alt="">
+                <p class="">Триплексные насосы</p>
+            </a>
+            <a href="" class="swiper-slide main-category__card">
+                <img src="../../img/card/3.png" alt="">
+                <p class="">Триплексные насосы</p>
+            </a>
+            <a href="" class="swiper-slide main-category__card">
+                <img src="../../img/card/1.png" alt="">
+                <p class="">Триплексные насосы</p>
+            </a>
+            <a href="" class="swiper-slide main-category__card">
+                <img src="../../img/card/2.png" alt="">
+                <p class="">Триплексные насосы</p>
+            </a>
+            <a href="" class="swiper-slide main-category__card">
+                <img src="../../img/card/3.png" alt="">
+                <p class="">Триплексные насосы</p>
+            </a>
+            <a href="" class="swiper-slide main-category__card">
+                <img src="../../img/card/1.png" alt="">
+                <p class="">Триплексные насосы</p>
+            </a>
+            <a href="" class="swiper-slide main-category__card">
+                <img src="../../img/card/2.png" alt="">
+                <p class="">Триплексные насосы</p>
+            </a>
+            <a href="" class="swiper-slide main-category__card">
+                <img src="../../img/card/3.png" alt="">
+                <p class="">Триплексные насосы</p>
+            </a>
+            <a href="" class="swiper-slide main-category__card">
+                <img src="../../img/card/1.png" alt="">
+                <p class="">Триплексные насосы</p>
+            </a>
+            <a href="" class="swiper-slide main-category__card">
+                <img src="../../img/card/2.png" alt="">
+                <p class="">Триплексные насосы1</p>
+            </a>
+            <a href="" class="swiper-slide main-category__card">
+                <img src="../../img/card/3.png" alt="">
+                <p class="">Триплексные насосы2</p>
+            </a>
+            <a href="" class="swiper-slide main-category__card">
+                <img src="../../img/card/1.png" alt="">
+                <p class="">Триплексные насосы3</p>
+            </a>
 
-            </div>
         </div>
+
+        <!-- If we need scrollbar -->
+        <div class="swiper-scrollbar"></div>
     </div>
+
     <a class="main-category__button">Перейти в каталог категорий</a>
 </section>
+
+<style>
+    .swiper {
+        width: 100%;
+        height: 300px;
+    }
+    .swiper-scrollbar-drag {
+        background-color: #D82329;
+    }
+</style>
+
+<script type="module">
+    import Swiper from 'https://cdn.jsdelivr.net/npm/swiper@9/swiper-bundle.esm.browser.min.js'
+
+    const swiper = new Swiper('.swiper', {
+        // Optional parameters
+        direction: 'horizontal',
+        loop: false,
+
+        // If we need pagination
+        pagination: {
+            el: '.swiper-pagination',
+        },
+
+        // Navigation arrows
+        navigation: {
+            nextEl: '.swiper-button-next',
+            prevEl: '.swiper-button-prev',
+        },
+
+        // And if we need scrollbar
+        scrollbar: {
+            el: '.swiper-scrollbar',
+        },
+        breakpoints: {
+            560: {
+                slidesPerView: 2,
+                spaceBetween: 30
+            },
+            // when window width is >= 320px
+            873: {
+                slidesPerView: 3,
+                spaceBetween: 30
+            },
+            // when window width is >= 480px
+            1210: {
+                slidesPerView: 4,
+                spaceBetween: 40
+            },
+            // when window width is >= 640px
+            1660: {
+                slidesPerView: 5,
+                spaceBetween: 50
+            }
+        }
+    });
+</script>
         <section class="main-spare page-padding">
   <div class="main-spare__container">
     <img class="main-spare__img_back" src="img/spare/01.png" alt="">
