--- a/app/pages/index.html
+++ b/app/pages/index.html
@@ -13,10 +13,12 @@
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@400;500;600;700&display=swap" rel="stylesheet">
 
-    <link rel="stylesheet" href="/path/to/style/jquery.jscrollpane.css" />
-    <script src="/path/to/cdn/jquery.min.js"></script>
-    <script src="/path/to/script/jquery.jscrollpane.js"></script>
+    <link
+            rel="stylesheet"
+            href="https://cdn.jsdelivr.net/npm/swiper@9/swiper-bundle.min.css"
+    />
 
+    <script src="https://cdn.jsdelivr.net/npm/swiper@9/swiper-bundle.min.js"></script>
 </head>
 <body>
 <div class="wrapper">
